k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solidarity-ingress
  namespace: solidarity
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600" 
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600" 
spec:
  rules:
    - host: solidarity.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: solidarity-frontend
              port:
                number: 80
